--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <table cellspacing="20">
   <tr>
-    <td><img src="logo.png" alt="Vishal Sharma's Photo" title="Vishal Sharma's Photo" width="200" height="200"></td>
+    <td><img src="logo1.png" alt="Vishal Sharma's Photo" title="Vishal Sharma's Photo" width="200" height="200"></td>
     <td><h1>Vishal Sharma</h1>
 <em>Juniors at <a href="https://nith.ac.in/"><strong>NIT Hamirpur</strong></a></em><br>
 B.Tech Computer Science
